--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 /* Global styles */
-@import url('https://fonts.googleapis.com/css2?family=Mountains+of+Christmas&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Mountains+of+Christmas&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap'); */
 @import './styles/themes.css';
 @import './styles/main.css';
 @import './styles/visualization.css';
@@ -15,11 +17,10 @@
 html,
 body {
   font-family:
-    'Inter',
+    'Roboto',
     -apple-system,
     BlinkMacSystemFont,
     'Segoe UI',
-    'Roboto',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
