--- a/src/styles/initial-hint.css
+++ b/src/styles/initial-hint.css
@@ -84,3 +84,10 @@
     justify-content: flex-start;
   }
 }
+
+/* Position initial hint lower in simple views for better visual separation */
+.decoding-view-container .initial-hint,
+.pretraining-simple-container .initial-hint {
+  align-items: flex-start;
+  padding-top: 320px;
+}
