--- a/src/styles/pretraining-simple.css
+++ b/src/styles/pretraining-simple.css
@@ -46,14 +46,14 @@
 }
 
 .pretraining-doc-arrow.active .shaft {
-  width: 3px;
-  background: var(--text-primary, #000);
+  /* width: 3px; */
+  /* background: var(--text-primary, #000); */
 }
 
 .pretraining-doc-arrow.active .head {
   border-left: 7px solid transparent;
   border-right: 7px solid transparent;
-  border-top: 10px solid var(--text-primary, #000);
+  /* border-top: 10px solid var(--text-primary, #000); */
 }
 
 .transformer-box.training-simple {
@@ -100,14 +100,14 @@
 }
 
 .arrow.arrow-down.active .shaft {
-  width: 3px;
-  background: var(--text-primary, #000);
+  /* width: 3px; */
+  /* background: var(--text-primary, #000); */
 }
 
 .arrow.arrow-down.active .head {
   border-left: 7px solid transparent;
   border-right: 7px solid transparent;
-  border-top: 10px solid var(--text-primary, #000);
+  /* border-top: 10px solid var(--text-primary, #000); */
 }
 
 /* Upward gradient arrow for feedback */
