--- a/src/styles/home-page.css
+++ b/src/styles/home-page.css
@@ -263,9 +263,7 @@
   .item-description {
     font-size: 0.875rem;
   }
-}
 
-@media (max-width: 480px) {
   .home-page {
     padding: 0.75rem;
   }
@@ -306,6 +304,11 @@
   .item-icon-wrapper {
     width: 44px;
     height: 44px;
+  }
+
+  .item-icon-img {
+    width: 30px;
+    height: 30px;
   }
 
   .item-icon-placeholder {
