--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 /* Global styles */
 /* @import url('https://fonts.googleapis.com/css2?family=Mountains+of+Christmas&display=swap'); */
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Consolas:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600;700&display=swap');
 /* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap'); */
 @import './styles/themes.css';
